--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -62,26 +62,32 @@
        {
               text-decoration: none;
               color: white;
+              font-size: large;
        
        }
        .inner-mid-container h4 a:hover
        {
               background-color: #f8111d;
+              font-size: large;
        }
 
        .homelink a {
               text-decoration: none;
               color: white;
+              font-size: large;
        }
 
        .profilelink a {
               text-decoration: none;
               color: white;
+              font-size: large;
        }
 
        .signout-container a {
               text-decoration: none;
               color: white;
+              font-size: large;
+             
        }
 </style>
 
@@ -99,7 +105,7 @@
 
                      <div class="profilelink">
                             <h4>
-                                   <a href="/employees/profile" target="_blank">Profile</a>
+                                   <a href="/employees/profile" target="_blank">List of Interviwee</a>
                             </h4>
                      </div>
 
