--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,10 +1,10 @@
 
-    <h1>SIGN IN</h1>
+    <h1 style="color: antiquewhite; color: rgba(0, 0, 0, 0.932) ; font-weight:900;">SIGN IN ONLY FOR EMPLOYEES</h1>
 
       
     <form action="/employees/session" method="post">
         <input type="text" name="email"placeholder="enter your email" required><br><br>
-        <input type="text" name="password" placeholder="enter password" required><br><br>
+        <input type="password" name="password" placeholder="enter password" required><br><br>
         <button type="submit">Sign In</button> 
     </form>
    
