--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,8 @@
 
-body
+ body
 {
-  background-color: #2C3E50;
-}
+  background-color:#134475;;
+} 
 .container
 {
     
@@ -167,7 +167,34 @@ form button:hover
 .signout
 {
   width: 100%;
-  background-color: #2C3E50;
-  font-size: larger;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  gap:20px;
+  
 } 
+
+.signout button
+{
+  width: 10%;
+  background-color: #ccc;
+ 
+
+}
+.signout button a
+{
+
+  text-decoration: none;
+  color:black;
+  font-size: larger;
+}
+
+.no-list
+{
+  color: white;
+  font-weight: bold;
+  font-size: large;
+}
 
