--- a/views/emply_profile.ejs
+++ b/views/emply_profile.ejs
@@ -7,7 +7,7 @@
 
   
     <div class="heading-elements">
-      <h3><a href="/interview/page">Click here to allocate interviews </a></h3>
+      <h3><a href="/interview/page" target="_blank">Click here to allocate interviews </a></h3>
     </div>
 
     <%if(locals.old_student_list){%>
@@ -18,6 +18,10 @@
 
         <div class="inner-interview-list-heading">
 
+          <div class="inside-inner-interview-list-heading">
+            <h3>Student Id </h3>
+          </div>
+   
         <div class="inside-inner-interview-list-heading">
           <h3>Student's name </h3>
         </div>
@@ -33,7 +37,7 @@
         <div class="inside-inner-interview-list-heading">
           <h3> Status</h3>
         </div>
-
+         
         <div class="inside-inner-interview-list-heading">
           <h3>Eligible for Interviews</h3>
         </div>
@@ -51,6 +55,12 @@
           <div class="interview-list">
           
             
+            <div class="inner-interview-list">
+              <span>
+                <%=oldStudentsList_details.std_uid%>
+              </span>
+
+            </div>
 
             <div class="inner-interview-list">
               <span>
