--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,8 @@
 
-      <h1>SIGN UP</h1>
+      <h1 style="color: antiquewhite; color: rgba(0, 0, 0, 0.938) ; font-weight:900;">SIGN UP ONLY FOR EMPLOYEES</h1>
       <form action="/employees/create" method="post">
        <input type="text" name="name" placeholder="Enter Your Name" required><br><br>
        <input type="text" name="email"placeholder="Enter Your Email" required><br><br>
-       <input type="text" name="password" placeholder="Enter Password" required><br><br>
+       <input type="password" name="password" placeholder="Enter Password" required><br><br>
        <button type="submit">Sign Up</button>
       </form>
