--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,7 @@
 body
 {
     margin: 0;
-    background-color: hsl(340, 20%, 92%);
+    background-color:#134475;
     text-align: center;
 }
 .header
