--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,5 @@
-<style>
+
+<!-- <style>
        .container {
               width: 100%;
               background-color: #2C3E50;
@@ -89,12 +90,46 @@
               font-size: large;
              
        }
-</style>
+</style> -->
 
 
-<div class="container">
+<!-- <div class="container"> -->
 
        <% if(locals.emply ){%>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"> 
+
+              <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+                     <div class="container-fluid">
+                       <a class="navbar-brand" href="#"></a>
+                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                         <span class="navbar-toggler-icon"></span>
+                       </button>
+                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-3">
+                           <li class="nav-item">
+                             <a class="nav-link active" aria-current="page" href="/">Home</a>
+                           </li>
+                           <li class="nav-item">
+                             <a class="nav-link active" href="/employees/profile">List of Interviwee</a>
+                           </li>
+
+                           <li class="nav-item">
+                            <a class="nav-link active" href="/download-csv">Click Here to Download the Student's Data</a>
+                          </li>
+                          
+                            
+                         </ul>
+                            
+                            <a class="btn text-white">
+                                   <%=emply.name%>
+                            </a>
+                            <a class="btn text-white" href="/employees/destroysession">LOG OUT</a>
+                     
+                       </div>
+                     </div>
+                   </nav>
+              
+<!-- 
               <div class="inner-right-container">
 
                      <div class="homelink">
@@ -130,7 +165,7 @@
                             <p> <a href="/employees/destroysession"> Sign Out </a></p>
                      </div>
 
-              </div>
+              </div> -->
 
               <%}%>
-</div>
+<!-- </div> -->
