--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,88 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/home.css">
 
   <% if(locals.emply){%>
-    <hr>
-      <div class="sub-heading">
+    <div class="container mt-2">
+          <div class="row bg-secondary">
+              <div class="col">
+                <h3 class="text-center"> Add New Students</h3>
+
+              </div>
+          </div>
+
+    </div>
+      <!-- <div class="sub-heading">
         <h3> Add New Students</h3>
-      </div>
- 
+      </div> -->
+    
+  <div class="container mt-1">
+    <div class="row bg-secondary justify-content-center">
+      <div class="col-8">
+      <form action="/students/create" id="new-std" method="post">
+        <div class="mb-1 mt-1">
+          <label for="student_id" class="form-label">Student Name</label>
+          <input type="text" name="stdname" class="form-control" id="student_id" aria-describedby="emailHelp" required>
+         
+        </div>
+        <div class="mb-1">
+          <label for="college_id" class="form-label">college</label>
+          <input type="text" name="college" class="form-control" id="college_id" required>
+        </div>
+        <div class="mb-1">
+          <label for="batch_id" class="form-label">Batch</label>
+          <input type="text" name="batch" class="form-control" id="batch_id" required>
+        </div>
+        
+
+        <select class="form-select mb-1" name="course"  id="course_id" aria-label="Default select example" required>
+          <option value="">Select Course</option>
+          <option value="DSA">DSA</option>
+          <option value="WebDev">WebDev</option>
+          <option value="React">React</option>
+        </select>
+        
+
+        
+        <select class="form-select mb-1" name="coursescore"  id="coursescore_id" aria-label="Default select example" required>
+          <option value="">Course Score</option>
+          <option value="Nill">Nill</option>
+          <option value="75%">75%</option>
+          <option value="85%">85%</option>
+          <option value="95%">95%</option>
+        </select>
+        
+
+        <select class="form-select mb-1" name="status"  id="status_id" aria-label="Default select example" required>
+          <option value="">Select Status</option>
+          <option value="Not Applicable">Not Applicable</option>
+          <option value="Placed">Placed</option>
+          <option value="Not Placed">Not Placed</option>
+        </select>
+
+        <select class="form-select mb-2" name="eligibleforinterview"  id="eligibleforinterview_id" aria-label="Default select example" required>
+          <option value="">Select Eligibility for Interviews</option>
+          <option value="Not Eligible">Not Eligible</option>
+          <option value="Eligible">Eligible</option>
+        </select>
+
+        <div class="d-grid mb-2 col-6 mx-auto">
+          
+          <button type="submit" class="btn btn-primary">Add Student</button>
+        </div>
   
-    <div class=" form">
+      </form>
+
+    </div>
+  </div>
+</div>
+
+
+     <!-- <div class=" form">
       <form action="/students/create" id="new-std" method="post">
 
         <input type="text" name="stdname" placeholder="Student Name" required>
         <input type="text" name="college" placeholder="College Name" required>
         <input type="text" name="batch" placeholder="Batch" required>
-        
-
-        
         
         <select name="course" id="course_id" required>
           <option value="">Select Course</option>
@@ -47,15 +114,53 @@
         </select>
 
         <button type="submit">Add Student </button>
-
+ 
 
       </form>
-    </div>
-    <% if(locals.std.length>0){%>
+    </div>-->
+    <% if(locals.std.length>0){%>  
      
      
+      <div class="container mt-1">
+         <div class="row bg-primary">
+            <div class="col">
+              <div class="table-responsive">
+                
+                <table class="table mt-1">
+                          <thead>
+                                  <tr>
+                                    <th scope="col">Student's name</th>
+                                    <th scope="col">College Name</th>
+                                    <th scope="col">Batch</th>
+                                    <th scope="col"> Course Name</th>
+                                    <th scope="col"> Course Score</th>
+                                    <th scope="col"> Status</th>
+                                    <th scope="col"> Eligible for Interview</th>
+                                  </tr>
+                          </thead>
 
-    <div class="outer-student-list-heading">
+                          <tbody>
+                                  <%for(let std_details of std){%>
+                                  <tr>
+                                    <th scope="row"> <%=std_details.stdname%></th>
+                                    <td> <%=std_details.college%></td>
+                                    <td>  <%=std_details.batch%></td>
+                                    <td> <%=std_details.course%></td>
+                                    <td>  <%=std_details.status%></td>
+                                    <td>  <<%=std_details.eligibleforinterview%></td>
+                                    <td><a href="/students/destroy/?id= <%= std_details._id%>">Remove</a></td>
+                                  </tr>
+                                  <%}%>
+                          </tbody>
+                 </table>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    <!-- <div class="outer-student-list-heading">
 
       <div class="inner-student-list-heading"> 
 
@@ -90,11 +195,11 @@
  
  
       </div>
-    </div>
+    </div> 
 
-     
+      -->
    
-    <div class="outer-student-list-container">
+    <!-- <div class="outer-student-list-container">
       
       
        <div class="studentlist-container"> 
@@ -137,21 +242,49 @@
           </div>
         <%}%>
         
-       </div>
+       </div>-->
     <%}else {%>
-      <div >
-        <h3 class="no-list "> Student's List not Available</h3>
-      </div>
+
+      <div class="container mt-2">
+        <div class="row bg-secondary">
+            <div class="col">
+              <h3 class="text-center"> Student's List not Available</h3>
+
+            </div>
+        </div>
+
+       </div>
+    
         
       <%}%>
-  </div>
-        
-        
-          <%} else {%>
-            <div  class="signout">
+
+  <%} else {%>
+
+              <div class="container-fluid mt-2">
+                  <div class="row" >
+
+                        <div class="col-lg-12">
+                        
+                            <p class="fs-2 text-white text-center ">WELCOME TO HOME PAGE</p>
+                        
+                        </div>
+                  </div>
+                   
+           </div>
+
+           <div class="d-grid gap-3 col-4 col-sm-3 col-md-2 mx-auto mt-4">
+            <a class="btn  btn-primary"   href="/employees/signup" role="button">SIGN UP</a>
+            <a class="btn btn-primary"  href="/employees/signin" role="button">SIGN IN </a>
+          </div> 
+
+
+            
+            <!-- <div  class="signout">
               <h1>WELCOME TO HOME PAGE</h1>
             <button> <a href="/employees/signup"> sign up</a></button>
           <button> <a href="/employees/signin"> sign in </a></button>
-         </div>
+         </div> -->
           <%}%>
+  
+          <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"> </script>
      
