--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,21 +1,21 @@
 
  body
 {
-  background-color:#134475;;
+  background-color:#134475;
 } 
+/* 
 .container
 {
     
     width: 100%;
     background-color: white;
-   
 }
 
 .heading-container
 {
     display: flex;
     width: 100%;
-    /* background-color: rgb(202, 241, 240); */
+
     justify-content: space-between;
     
 }
@@ -34,7 +34,7 @@
   color: antiquewhite;
   
 }
-/* styling form div */
+
 .form
 {
           width: 100%;
@@ -93,7 +93,7 @@ form button:hover
     display: flex;
     justify-content: center;
     margin-top: .5%;
-    /* background-color:rgba(240, 48, 48, 0.664); */
+  
 }
 
 .inner-student-list-heading
@@ -170,7 +170,204 @@ form button:hover
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+
+  align-items: center;
+  gap:20px;
+  
+} 
+
+.signout button
+{
+  width: 10%;
+  background-color: #1fa704;
+ 
+
+}
+.signout button a
+{
+
+  text-decoration: none;
+  color:black;
+  font-size: larger;
+}
+
+.no-list
+{
+  color: white;
+  font-weight: bold;
+  font-size: large;
+}
+ 
+
+
+.container
+{
+    
+    width: 100%;
+    background-color: white;
+   
+}
+
+.heading-container
+{
+    display: flex;
+    width: 100%;
+
+    justify-content: space-between;
+    
+}
+.heading-elements
+{
+    width: 50%;
+    
+
+}
+
+
+.sub-heading
+{
+  width: 100%;
+  text-align: center;
+  color: antiquewhite;
+  
+}
+
+.form
+{
+          width: 100%;
+          border: 2px;
+          display: flex;
+          justify-content: center;
+          color: aliceblue;
+          
+}
+form
+{
+  width: 40%;
+  box-sizing: border-box;
+  font-weight: 700;
+}
+form input
+{
+  width: 100%;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+form select
+{
+  width: 100%;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+form button
+{
+  width: 30%;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+ 
+}
+form button:hover
+{
+  background-color: rgb(0, 255, 13);
+}
+
+
+.outer-student-list-heading
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: .5%;
+  
+}
+
+.inner-student-list-heading
+{
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    margin-top: .5%;
+    background-color: #3671acf8;
+} 
+.inside-inner-student-list-heading
+{
+    text-align:center;
+    width: 20%;
+    color: aliceblue;
+}
+
+
+.outer-student-list-container
+{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: .5%;
+}
+
+.studentlist-container
+{
+  width: 85%;
+  background-color:white;
+
+  
+}
+
+.inner-studentlist-container
+{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color:hsl(34, 78%, 91%);
+  margin-top: .5%;
+  margin-bottom: .5%;
+  box-sizing: border-box;
+  
+
+}
+#last
+{
+  width: 40%;
+  color:aliceblue;
+}
+.studentdetails
+{
+  width: 20%;
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+}
+.studentdetails a
+{
+  text-decoration: none;
+  color: black;
+}
+
+.heading-elements-links a
+{
+  text-decoration: none;
+  color: black; 
+
+}
+.signout
+{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
   align-items: center;
   gap:20px;
   
@@ -197,4 +394,4 @@ form button:hover
   font-weight: bold;
   font-size: large;
 }
-
+  */
