--- a/views/emply_profile.ejs
+++ b/views/emply_profile.ejs
@@ -1,7 +1,7 @@
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/profile.css">
 
-<div class="outer-container">
+
 
   <%if(locals.emply){%>
 
@@ -10,102 +10,56 @@
 
     <%if(locals.old_student_list.length>0){%>
 
-      <div class="heading-elements">
-        <h3><a href="/interview/page" target="_blank">Click here to allocate interviews </a></h3>
+
+      <div class="container mt-2">
+        <div class="row bg-secondary">
+            <div class="col">
+              <h3 class="text-center text-white"><a href="/interview/page" target="_blank" style="text-decoration: none; color: white;">Click here to allocate interviews </a></h3>
+
+            </div>
+        </div>
       </div>
-        
-      <div class="outer-interview-list-heading">
+  
+  <div class="container mt-1">
+    <div class="row bg-primary">
+      <div class="col">
+        <div class="table-responsive">
 
-        <div class="inner-interview-list-heading">
-
-          <div class="inside-inner-interview-list-heading">
-            <h3>Student Id </h3>
-          </div>
-   
-        <div class="inside-inner-interview-list-heading">
-          <h3>Student's name </h3>
+        <table class="table mt-1">
+          <thead>
+            <tr>
+              <th scope="col">Student Id</th>
+              <th scope="col">Student's name</th>
+              <th scope="col">Course Name</th>
+              <th scope="col"> Course Score</th>
+              <th scope="col"> Status</th>
+              <th scope="col"> Eligible for Interviews</th>
+            </tr>
+          </thead>
+          
+          <tbody>
+            <%for(let oldStudentsList_details of old_student_list){%>
+              <tr>
+                <th scope="row"> <%=oldStudentsList_details.std_uid%></th>
+                <td>  <%=oldStudentsList_details.stdname%></td>
+                <td> <%=oldStudentsList_details.course%></td>
+                <td> <%=oldStudentsList_details.coursescore%></td>
+                <td>   <%=oldStudentsList_details.status%></td>
+                <td>   <%=oldStudentsList_details.eligibleforinterview%></td>
+              </tr>
+              <%}%>
+            </tbody>
+          </table>
+          
         </div>
-
-        <div class="inside-inner-interview-list-heading">
-          <h3> Course Name </h3>
-        </div>
-
-        <div class="inside-inner-interview-list-heading">
-          <h3> Course Score </h3>
-        </div>
-
-        <div class="inside-inner-interview-list-heading">
-          <h3> Status</h3>
-        </div>
-         
-        <div class="inside-inner-interview-list-heading">
-          <h3>Eligible for Interviews</h3>
-        </div>
-
       </div>
     </div>
-
-
-     
-      <%for(let oldStudentsList_details of old_student_list){%>
-      
-        <div class="outer-interview-list">
-          
-
-          <div class="interview-list">
-          
-            
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.std_uid%>
-              </span>
-
-            </div>
-
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.stdname%>
-              </span>
-
-            </div>
-
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.course%>
-              </span>
-
-            </div>
-
-
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.coursescore%>
-              </span>
-
-            </div>
-
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.status%>
-              </span>
-
-            </div>
-
-            <div class="inner-interview-list">
-              <span>
-                <%=oldStudentsList_details.eligibleforinterview%>
-              </span>
-
-            </div>
-
-          </div>
-        </div>
-        <%}%>
+    </div>
+    
+    
           <%}else{%>
             <div class="no-list">
               <span>Interview List not Available</span>
             </div>
             <%}%>
 <%}%>
-
-</div>
