--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -1,24 +1,12 @@
-<link rel="stylesheet" href="/css/interview.css">
-<div class="outer-container">
 
-    <div class="heading">
-        <h3>Allocate Interview to Students</h3>
-    </div>
-
-       
-
-
-    <div class="form">
-
-        <%if(locals.emply){%>
-
-            <form action="/interview/create" method="post">
-                <input type="text" name="stduid" placeholder="Interview Id" required>
-                <input type="text" name="interviewee" placeholder="Interviewee Name" required>
-                <input type="text" name="company" placeholder="Company Name" required>
-                <input type="date" name="date" placeholder="Interview date" required>
-
-
+<!-- 
+<form action="/interview/create" method="post">
+    
+    
+    <input type="text" name="stduid" placeholder="Interview Id" required>
+    <input type="text" name="interviewee" placeholder="Interviewee Name" required>
+    <input type="text" name="company" placeholder="Company Name" required>
+    <input type="date" name="date" placeholder="Interview date" required>
                 <select name="result" id="result" required>
                     <option value="">Status</option>
                     <option value="on hold">on hold</option>
@@ -30,13 +18,136 @@
                 <button type="submit">Assign Interview</button>
 
             </form>
+    
+
+ -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/interview.css">
+
+
+    
+<div class="container mt-2">
+    <div class="row bg-secondary">
+        <div class="col">
+            <h3 class="text-center text-white"><a href="/interview/page" target="_blank" style="text-decoration: none; color: white;">Click here to allocate interviews </a></h3>
+            
+        </div>
+    </div>
+</div>
+
+<!--     
+    <div class="heading">
+        <h3>Allocate Interview to Students</h3>
+    </div> -->
+    
+    
+    
+    
+    
+    
+    
+    <%if(locals.emply){%>
+        
+        
+        <div class="container mt-1">
+            <div class="row bg-secondary justify-content-center">
+                <div class="col-8">
+                    <form action="/interview/create" method="post">
+                        <div class="mb-1 mt-1">
+                            <label for="student_id" class="form-label">Interview Id</label>
+                            <input type="text" name="stduid" class="form-control" id="student_id" aria-describedby="emailHelp" required>
+                            
+                        </div>
+                        <div class="mb-1">
+                            <label for="interviewee_id" class="form-label">Interviewee Name</label>
+                            <input type="text" name="interviewee" class="form-control" id="interviewee_id" required>
+                        </div>
+
+                        <div class="mb-1">
+                            <label for="company_id" class="form-label">Company</label>
+                        <input type="text" name="company" class="form-control" id="company_id" required>
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="date_id" class="form-label">Date</label>
+                          <input type="date" name="date" class="form-control" id="date_id" required>
+                        </div>
+        
+                        <select class="form-select mb-1" name="result"  id="status_id" aria-label="Default select example" required>
+                            <option value="">Select Status</option>
+                            <option value="on hold">on hold</option>
+                            <option value="Pass">Pass</option>
+                            <option value="Fail">Fail</option>
+                            <option value="did not Attempt">didn't Attempt</option>
+                        </select>
+
+      
+                            <div class="d-grid mb-2 col-6 mx-auto">
+                                
+                                <button type="submit" class="btn btn-primary">Assign Interview</button>
+                            </div>
+        
+                    </form>
+    
+                 </div>
+            </div>
     </div>
 
 
-    <%if(locals.interviewl_ist.length>0){%>
+
+    <%if(locals.interview_list.length>0){%>
 
         
+      <div class="container mt-1">
+         <div class="row bg-primary">
+            <div class="col">
+              <div class="table-responsive">
+                
+                <table class="table mt-1">
+                          <thead>
+                                  <tr>
+                                    <th scope="col">Student's name</th>
+                                    <th scope="col">Company Name</th>
+                                    <th scope="col"> Interview date</th>
+                                    <th scope="col"> Interview result</th>
+                                    <th scope="col"> Mark the result</th>
+                
+                                  </tr>
+                          </thead>
 
+                          <tbody>
+                                  <%for(let interview_details of interview_list){%>
+                                  <tr>
+                                    <th scope="row"><%=interview_details.interviwee%></th>
+                                    <td><%=interview_details.company%></td>
+                                    <td> <%= new Date(interview_details.date).toISOString().split('T')[0] %></td>
+                                    <td> <%=interview_details.result%></td>
+                                    <td>
+                                        <form action="/interview/markresult" method="post">
+                                            <input type="hidden" name="stdref" value="<%=interview_details.stdref%>">
+                                            <select name="mark">
+                                                <option value="">select</option>
+                                                <option value="on hold">on hold</option>
+                                                <option value="Pass">Pass</option>
+                                                <option value="Fail">Fail</option>
+                                                <option value="didn't Attempt">didn't Attempt</option>
+                                            </select>
+                                            <button type="submit" class="btn btn-success">mark</button>
+                                            
+                                        </form>
+                                    </td>
+                                  </tr>
+                                  <%}%>
+                          </tbody>
+                 </table>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+<!-- 
         <div class="outer-interview-list-heading">
 
             <div class="inner-interview-list-heading">
@@ -62,11 +173,11 @@
            
 
             </div>
-         </div>      
+         </div>   
 
 
                
-         <%for(let interview_details of interviewl_ist){%>
+         <%for(let interview_details of interview_list){%>
                     <div class="outer-interview-list">
                             
                        
@@ -111,7 +222,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <%}%>
               <%}else{%>
               <div class="no-list">
@@ -120,4 +231,3 @@
               <%}%>
 
    <%}%>
-</div>
