--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -116,11 +116,18 @@
         </div>
 
       </div>
-   <%}%>
-              <%}else{%>
-              <div class="no-list">
-                <span>Interview List not Available</span>
-              </div>
-              <%}%>
+
+     <%}else{%>
+
+        <div class="container mt-2">
+            <div class="row bg-secondary">
+                <div class="col">
+                    <h3 class="text-center text-waring">Interview List not Available</h3>
+                    
+                </div>
+            </div>
+        </div>
+             
+     <%}%>
 
    <%}%>
